# LightHostFork

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GITHUB_PROJECT_DESCRIPTION.md  LHFork.sln  LHFork.vcxproj  LHFork.vcxproj.bak  LHFork.vcxproj.filters  LightHost.jucer  LightHost.jucer.bak  NovaHost.jucer  NovaHost.sln  NovaHost.vcxproj  NovaHost.vcxproj.backup  NovaHost.vcxproj.filters  UpgradeLog.htm  build_juce_release.bat  build_log.txt  build_log_detailed.txt  build_nova_improved.bat  build_novahost.bat  build_novahost_fixed.bat  build_novahost_release.bat  build_release.bat  build_release_simple.bat  build_simple_msbuild.bat  build_with_devenv.bat  readme.md  rebuild_nova.bat  run_comprehensive_tests.bat  shellcheck.bat  tatus
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  codacy.yml  codeql-analysis.yml  codeql.yml  labeler.yml  linux-build.yml  shellcheck.yml  windows-build.yml
Backup/: NovaHost.vcxproj
Installer/: BuildInstaller.bat  BuildNovaHostInstaller.bat  LightHost.manifest  LightHostSetup.iss  NovaHost.manifest  NovaHostSetup.iss  WINDOWS_INSTALL_GUIDE.md
NovaHost/: ERROR_ASSESSMENT.md  GPU_ACCELERATION.md  README.md  WINDOWS_INSTALL_GUIDE.md
Source/: GPUAccelerationManager.cpp  GPUAccelerationManager.h  HostStartup.cpp  IconMenu.cpp  IconMenu.hpp  PluginWindow.cpp  PluginWindow.h  SafePluginScanner.h  SplashScreen.cpp  SplashScreen.h  ThreadPool.h
Source/Core/: HostStartup.cpp
Source/Plugin/: PluginWindow.cpp  PluginWindow.h
Source/UI/: IconMenu.cpp  IconMenu.hpp
Tests/: PluginHostTests.cpp
Utilities/: MonitorMemoryUsage.ps1  NovaHost_TestingFeedback.md  PackageForTesters.bat  Reset NovaHost Settings.command  Reset Settings.command  StressTestPluginLoading.bat  add_shellcheck_to_path.bat  build_linux.sh  install_shellcheck.bat
docs/: IMPLEMENTATION_GUIDE.md  PROJECT_ORGANIZATION.md  WINDOWS_INSTALL_GUIDE.md
(+3 files in other folders)
